# hankrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pages.yml
benches/: hankel_benchmark.rs
docs/: book.toml
docs/src/: SUMMARY.md  gallery.md  index.md  known_transforms.md  literature_comparison.md  one_shot_example.md  simple_example.md  speed_usage_example.md  spherical_known_transforms.md  usage_example.md
examples/: known_transforms.rs  literature_comparison.rs  one_shot_example.rs  simple_example.rs  simple_plot.rs  speed_usage_example.rs  spherical_known_transforms.rs  usage_example.rs
examples/helper/: mod.rs
src/: hankel.rs  lib.rs  one_shot.rs  test.rs
src/bessel_zeros/: mod.rs  test.rs
src/tests/: mod.rs
tests/: test_one_shot.rs  test_transformer.rs
tests/utils/: mod.rs
