[package]
name = "hankrs"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
ndarray-stats = "0.6.0"
conv = "0.3.3"
# scilib = "1.0.0"
num-complex = "0.4.6"
csv = "1.4.0"
approx = "0.5.1"
ndarray-interp = "0.5.0"
rand = "0.9.2"
# complex-bessel-rs = "1.2.1"
# GSL = "7.0.0"
# amos-bessel-rs = { git = "https://github.com/etfrogers/bessel-rs.git/", branch = "main" }
amos-bessel-rs = { path = "../bessel-rs/amos-bessel-rs" }
num = "0.4.3"
rstest_reuse = "0.7.0"


[dev-dependencies]
rstest = "0.26.1"
