[package]
name = "hankrs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An implementation of quasi-discrete hankel transforms in rust"
repository = "https://github.com/etfrogers/hankrs"
keywords = ["hankel-transforms", "quasi-discrete"]
authors = ["Edward Rogers <etfrogers@hotmail.com>"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
ndarray-stats = "0.6.0"
conv = "0.3.3"
num-complex = "0.4.6"
csv = "1.4.0"
approx = "0.5.1"
ndarray-interp = "0.5.0"
rand = "0.9.2"
amos-bessel-rs = "0.3.0"
bessel-zeros = "0.1.1"
num = "0.4.3"
rstest_reuse = "0.7.0"


[dev-dependencies]
rstest = "0.26.1"
plotters = "0.3.7"

[profile.profiling]
inherits = "release"
debug = true
