[package]
name = "hankrs"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An implementation of quasi-discrete hankel transforms in rust"
repository = "https://github.com/etfrogers/hankrs"
keywords = ["hankel-transforms", "quasi-discrete"]
authors = ["Edward Rogers <etfrogers@hotmail.com>"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = { version = "0.16", features = ["approx", "blas", "rayon"] }
ndarray-stats = "0.6.0"
conv = "0.3.3"
num-complex = "0.4.6"
csv = "1.4.0"
approx = "0.5.1"
ndarray-interp = "0.5.0"
rand = "0.9.2"
amos-bessel-rs = "0.3.0"
real-bessel = "0.1.0"
bessel-zeros = "0.2.0"
num = "0.4.3"
rstest_reuse = "0.7.0"
rayon = "1.12.0"
thiserror = "2.0.18"
roots = "0.0.8"

# 1. Use Apple Accelerate when testing on a Mac
[target.'cfg(target_os = "macos")'.dev-dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }

# 2. Use OpenBLAS when testing on Linux or Windows (like GitHub Actions)
[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", default-features = false, features = ["system"] }

[dev-dependencies]
rstest = "0.26.1"
plotters = "0.3.7"
criterion = "0.5"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "hankel_benchmark"
harness = false
